# teste_crewai

./: README.md
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
teste/: README.md  pyproject.toml
teste/src/teste/: crew.py  main.py  testando.py
