[tool.poetry]
name = "teste"
version = "0.1.0"
description = "teste using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
teste = "teste.main:run"
train = "teste.main:train"
replay = "teste.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
